--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.4.1",
+    "date-fns": "^2.20.2",
+    "firebase": "^8.3.3",
     "papaparse": "^5.3.0",
     "vue": "^3.0.11",
     "vue-router": "^4.0.6"
