--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.20.2",
     "firebase": "^8.3.3",
     "papaparse": "^5.3.0",
+    "uuid": "^8.3.2",
     "vue": "^3.0.11",
     "vue-router": "^4.0.6"
   },
